--- a/Parsing_Output/README
+++ b/Parsing_Output/README
@@ -2,7 +2,12 @@ README
 
 I will fix this to work later as one script file...as for now:
 
-1) first use the importSD.py file with a text file (the raw_text)
+*The text file needs to casedown*
+
+1) run the raw text file into the pText_Rec.py script which will then create two output files which contain the lines to be parsed and non-parsed
+
+
+2) use the importSD.py file with the “name”_p_text
 	- be sure to have set environmental path to englishPCFG.ser.gz
 	- this will create an output text file with the typedDependency data
 	- the output files will be created in the current directory that you are
